--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
   }
   
   .field {
-    width: 140px;
+    margin: 20px;
+    width: 200px;
     height: 40px;
     display: flex;
     justify-content: space-evenly;
